--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
+    "google-spreadsheet": "^3.2.0",
     "hbs": "^4.2.0",
     "nodemon": "^2.0.15",
     "path": "^0.12.7"
